# sae-object-tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  docker_build.sh  pyproject.toml  settings.template.yaml
.github/workflows/: build-publish-latest.yaml  create-release.yaml  pr_build.yaml
debian/: requirements.txt
objecttracker/: config.py  stage.py  tracker.py
objecttracker/boxmot_ocsort/: __init__.py  association.py  basetracker.py  ocsort.py  ops.py  xywha_kf.py
tests/: test_config.py  test_stage.py
tests/stage/: conftest.py  test_stage.py
