[tool.poetry]
name = "objecttracker"
version = "3.3.0"
description = ""
authors = ["flonix8 <flstanek@googlemail.com>"]
license = "AGPLv3"
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "1.26.4"
pydantic = "2.13.1"
pydantic-settings = "2.13.1"
visionapi = { git = "https://github.com/starwit/vision-api.git", subdirectory = "python/visionapi", tag = "3.5.2" }
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.14.2" }
opencv-python = "4.11.0.86"
filterpy = "1.4.5"
prometheus-client = "0.25.0"
lapx = "0.9.4"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
